--- a/site/zensical.toml
+++ b/site/zensical.toml
@@ -40,6 +40,7 @@ Copyright &copy; 2026 The authors
 
 
 docs_dir = "src"
+site_dir = "build"
 
 # Zensical supports both implicit navigation and explicitly defined navigation.
 # If you decide not to define a navigation here then Zensical will simply
