--- a/site/zensical.toml
+++ b/site/zensical.toml
@@ -15,6 +15,7 @@ site_dir = "build"
 extra_css = [".assets/css/width.css"]
 # extra_javascript = ["javascripts/extra.js"]
 
+
 # Zensical supports both implicit navigation and explicitly defined navigation.
 # If you decide not to define a navigation here then Zensical will simply
 # derive the navigation structure from the directory structure of your
@@ -22,10 +23,31 @@ extra_css = [".assets/css/width.css"]
 # can be defined using TOML syntax.
 #
 # Read more: https://zensical.org/docs/setup/navigation/
-# nav = [
-#   { "Get started" = "index.md" },
-#   { "Markdown in 5min" = "markdown.md" },
-# ]
+nav = [
+    {"Home" = [
+        {"Home" = [
+            "index.md",
+            {"Extracurricular" = [
+                {"Interested in Research?" = "home/ec/research.md"},
+                {"Learn Computational Physics" = "home/ec/learn_comp_phy.md"},
+            ]},
+            {"Archive" = [
+                {"Previous Courses" = "home/archive/prev_courses.md"},
+            ]},
+        ]},
+    ]},
+
+    {"PHY-203" = [
+        "203/index.md",
+    ]},
+    {"PHY-205" = [
+        "205/index.md",
+    ]},
+    {"PHY-206" = [
+        "206/index.md",
+    ]},
+]
+
 
 
 
@@ -64,7 +86,7 @@ features = [
     # https://zensical.org/docs/setup/navigation/#navigation-expansion
     # "navigation.expand",
 
-    # zk note: ????????
+    # zk note: ????????!!!!!!!
     # When section index pages are enabled, documents can be directly attached
     # to sections, which is particularly useful for providing overview pages.
     # https://zensical.org/docs/setup/navigation/#section-index-pages
@@ -85,16 +107,6 @@ features = [
     # using instant navigation, a progress indicator can be enabled.
     # https://zensical.org/docs/setup/navigation/#progress-indicator
     "navigation.instant.progress",
-
-    # When navigation paths are activated, a breadcrumb navigation is rendered
-    # above the title of each page
-    # https://zensical.org/docs/setup/navigation/#navigation-path
-    "navigation.path",
-
-    # When pruning is enabled, only the visible navigation items are included
-    # in the rendered HTML, reducing the size of the built site by 33% or more.
-    # https://zensical.org/docs/setup/navigation/#navigation-pruning
-    "navigation.prune",
 
     # When sections are enabled, top-level sections are rendered as groups in
     # the sidebar for viewports above 1220px, but remain as-is on mobile.
