--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
 name = "phyzk-edu"
 version = "0.1.0"
-description = "Add your description here"
+description = "Teaching website @ `edu.phyzk.net`."
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.13,<3.14"
 dependencies = [
     "zensical>=0.0.19",
 ]
