--- a/site/zensical.toml
+++ b/site/zensical.toml
@@ -7,7 +7,7 @@ site_author = "Zain Kamal"
 # The site_url is the canonical URL for your site. When building online
 # documentation you should set this.
 # Read more: https://zensical.org/docs/setup/basics/#site_url
-# site_url = "https://edu.phyzk.net/"
+site_url = "https://edu.phyzk.net/"
 
 docs_dir = "src"
 site_dir = "build"
