--- a/site/zensical.toml
+++ b/site/zensical.toml
@@ -12,9 +12,6 @@ site_url = "https://edu.phyzk.net/"
 docs_dir = "src"
 site_dir = "build"
 
-extra_css = [".assets/css/width.css"]
-# extra_javascript = ["javascripts/extra.js"]
-
 
 # Zensical supports both implicit navigation and explicitly defined navigation.
 # If you decide not to define a navigation here then Zensical will simply
@@ -50,6 +47,21 @@ nav = [
 ]
 
 
+
+
+
+extra_css = [
+    ".assets/css/width.css"
+]
+extra_javascript = [
+    ".assets/javascripts/mathjax.js",
+    "https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js"
+]
+
+[project.markdown_extensions.pymdownx.arithmatex]
+generic = true
+
+[project.markdown_extensions.attr_list]
 
 
 
